--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "babelify": "^7.3.0",
     "browserify": "^16.2.2",
     "es": "^0.6.0",
-    "event-stream": "^3.3.4",
+    "event-stream": "3.3.4",
     "express": "latest",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
